[package]
name = "kvs"
version = "0.1.0"
authors = ["Hiroshi Takeuchi (hiroshi.takeuchi111@gmail.com)"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.0"
clap = { version = "4.3.19", features = ["derive"] }
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
